[package]
name = "function"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.3.0"
serde = {version = "1.0.102", features = ["derive"]}
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
faasten-core = { git = "https://github.com/ddaud1/faasten-core.git" }

