[package]
name = "wasmRuntime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
extism = "1.8.0"
extism-convert = "1.8.0"
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
faasten-core = { git = "https://github.com/ddaud1/faasten-core.git" }
serde = "1.0.214"
serde_json = "1.0.132"
