[package]
name = "wasmRuntime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
extism = "1.8.0"
extism-convert = "1.8.0"
labeled = { git = "https://github.com/alevy/labeled", features = ["buckle"] }
faasten-core = { git = "https://github.com/ddaud1/faasten-core.git" }
faasten-interface-types = { git = "https://github.com/ddaud1/faasten-interface-types.git" }
serde = {version = "1.0.102", features = ["derive"]}
serde_json = "1.0.132"
